--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <a href="index.html">
                         <img src="assets/img/icons/Santen_logo.svg" alt="" style="max-width: 150px;">
                         <small>Портал здоровых глаз</small>
-                        </a>
+                    </a>
                     <div class="header__menu">
                         <div class="header__menu--btns">
                             <a data-test class="btn btn-light" href="osdi.html">Пройдите тест OSDI</a>
@@ -41,7 +41,24 @@
             <div class="hero-home hero">
                 <div class="container">
                     <div class="hero-home__slider">
-
+                        <div class="slider__btns">
+                            <div class="slider__prev slider__btn">
+                                <svg width="13" height="18" viewBox="0 0 13 18" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M1.05873 10.5848C0.0187152 9.78421 0.0187148 8.21579 1.05873 7.41519L9.28001 1.08644C10.5951 0.0740504 12.5 1.01158 12.5 2.67126L12.5 15.3287C12.5 16.9884 10.5951 17.9259 9.28001 16.9136L1.05873 10.5848Z"
+                                        fill="white" />
+                                </svg>
+                            </div>
+                            <div class="slider__next slider__btn">
+                                <svg width="13" height="18" viewBox="0 0 13 18" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M11.9413 7.41519C12.9813 8.21579 12.9813 9.78421 11.9413 10.5848L3.71999 16.9136C2.40485 17.9259 0.499999 16.9884 0.499999 15.3287L0.5 2.67126C0.5 1.01158 2.40485 0.0740492 3.71999 1.08644L11.9413 7.41519Z"
+                                        fill="white" />
+                                </svg>
+                            </div>
+                        </div>
                         <div class="hero__wrapper">
                             <div class="hero-home__offer hero__offer">
                                 <div class="hero-home__offer--subtitle">(Ocutears® Hydro+)</div>
@@ -52,12 +69,103 @@
                             <div class="hero-home__img hero__img">
                                 <img src="assets/img/ocurtears.png" alt="">
                             </div>
+                            <div class="hero__annex">
+                                <div class="hero__annex--item">
+                                    <div class="hero__annex--icon"><img src="assets/img/icons/icon-1.svg" alt=""></div>
+                                    <div class="hero__annex--text">Оптимальная концентрация ГК 0,2% не вызывает ощущения
+                                        склеивания</div>
+                                </div>
+                                <div class="hero__annex--item">
+                                    <div class="hero__annex--icon"><img src="assets/img/icons/icon-2.svg" alt=""></div>
+                                    <div class="hero__annex--text">Способствует более интенсивной регенерации глазной
+                                        поверхности</div>
+                                </div>
+                                <div class="hero__annex--item">
+                                    <div class="hero__annex--icon"><img src="assets/img/icons/icon-3.svg" alt=""></div>
+                                    <div class="hero__annex--text">Не содержит<br>консервантов</div>
+                                </div>
+                            </div>
                         </div>
 
                     </div>
 
                 </div>
             </div>
+            <section class="care">
+                <div class="container">
+                    <div class="care__header">
+                        <h2>Ухаживайте за глазами и наслаждайтесь жизнью!</h2>
+                        <div class="care__subtitle">Что делать при синдроме «сухого глаза», чтобы вернуться к комфортной
+                            жизни</div>
+                    </div>
+                    <div class="care__nav">
+                        <div class="care__paginations">
+                            <ul>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                                <li></li>
+                            </ul>
+                        </div>
+                        <div class="care__btns">
+                            <div class="care__btn care__prev">
+                                <svg width="37" height="36" viewBox="0 0 37 36" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M31.7959 0.0311504L36.3789 4.61419L22.9931 18L36.3789 31.3858L31.7959 35.9688L13.827 18L31.7959 0.0311504ZM18 0.0311492L22.5831 4.61419L9.19727 18L22.5831 31.3858L18 35.9688L0.0311791 18L18 0.0311492Z"
+                                        fill="#D9D9D9" />
+                                </svg>
+                            </div>
+                            <div class="care__btn care__next">
+                                <svg width="37" height="36" viewBox="0 0 37 36" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M5.20414 35.9688L0.621094 31.3858L14.0069 18L0.621094 4.61423L5.20414 0.031189L23.173 18L5.20414 35.9688ZM19 35.9688L14.4169 31.3858L27.8027 18L14.4169 4.61423L19 0.031189L36.9688 18L19 35.9688Z"
+                                        fill="#00ADEE" />
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="care__slider">
+                        <div class="care__slider--wrapper">
+
+                            <div class="care__slide">
+                                <div class="care__slide--text">
+                                    <h3>Симптомы синдрома «сухого глаза»</h3>
+                                    <p>Синдром «сухого глаза» - это не просто сухость поверхности глаза:
+                                        она может проявляться по-разному и ухудшать качество жизни.</p>
+                                    <ul>
+                                        <li>Жжение</li>
+                                        <li>Резь</li>
+                                        <li>Ощущение инородного тела в глазу</li>
+                                        <li>Покраснение и слезоточивость глаз</li>
+                                        <li>Ухудшение зрения</li>
+                                        <li>Повышенная светобоязнь</li>
+                                        <li>Усталость глаз</li>
+                                        <li>Ухудшение ночного зрения</li>
+                                        <li>Зрительный дискомфорт</li>
+                                    </ul>
+                                </div>
+                                <div class="care__slide--img">
+                                    <img src="assets/img/slide-1.jpg" alt="">
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container">
