--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
         </main>
         <footer class="footer">
             <div class="container">
+                <div class="footer__top accent">
+                    Свое счастья надо видеть ясно!
+                </div>
                 <div class="footer__top">
                     Самолечение может быть опасным для вашего здоровья
                 </div>
