--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 </div>
                                 <div class="hero__annex--item">
                                     <div class="hero__annex--icon"><img src="assets/img/icons/icon-3.svg" alt=""></div>
-                                    <div class="hero__annex--text">Не содержит<br>консервантов</div>
+                                    <div class="hero__annex--text">Не содержит консервантов</div>
                                 </div>
                             </div>
                         </div>
