--- a/osdi.html
+++ b/osdi.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="header__wrapper">
                     <a href="index.html">
-                        <img src="assets/img/icons/Santen_logo.svg" alt="" style="max-width: 150px;">
+                        <img src="assets/img/icons/Santen_logo.svg" alt="" style="max-width: clamp(6.25rem, calc(5.29rem + 4.81vw), 9.38rem);">
                         <small>Портал здоровых глаз</small>
                     </a>
                     <div class="header__menu">
@@ -443,7 +443,7 @@
                 <div class="footer__wrapper">
                     <div class="footer__item"><a href="#">Политика конфидециальности</a></div>
                     <a href="index.html">
-                        <img src="assets/img/icons/Santen_logo.svg" alt="">
+                        <img src="assets/img/icons/Santen_logo.svg" alt="" style="max-width: clamp(6.25rem, calc(5.29rem + 4.81vw), 9.38rem);">
                     </a>
                     <div class="footer__item">
                         <p>Copyright © 2024</p>
