--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -14,7 +15,8 @@
             <div class="container">
                 <div class="header__wrapper">
                     <a href="index.html">
-                        <img src="assets/img/icons/Santen_logo.svg" alt="" style="max-width: clamp(6.25rem, calc(5.29rem + 4.81vw), 9.38rem);">
+                        <img src="assets/img/icons/Santen_logo.svg" alt=""
+                            style="max-width: clamp(6.25rem, calc(5.29rem + 4.81vw), 9.38rem);">
                         <small>Портал здоровых глаз</small>
                     </a>
                     <div class="header__menu">
@@ -100,23 +102,6 @@
                     </div>
                     <div class="care__nav">
                         <div class="care__paginations">
-                            <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
                         </div>
                         <div class="care__btns">
                             <div class="care__btn care__prev">
@@ -138,9 +123,30 @@
                         </div>
                     </div>
                     <div class="care__slider">
-                        <div class="care__slider--wrapper">
+                        <div class="care__slider--wrapper swiper-wrapper">
 
-                            <div class="care__slide">
+                            <div class="care__slide swiper-slide">
+                                <div class="care__slide--text">
+                                    <h3>Симптомы синдрома «сухого глаза»</h3>
+                                    <p>Синдром «сухого глаза» - это не просто сухость поверхности глаза:
+                                        она может проявляться по-разному и ухудшать качество жизни.</p>
+                                    <ul>
+                                        <li>Жжение</li>
+                                        <li>Резь</li>
+                                        <li>Ощущение инородного тела в глазу</li>
+                                        <li>Покраснение и слезоточивость глаз</li>
+                                        <li>Ухудшение зрения</li>
+                                        <li>Повышенная светобоязнь</li>
+                                        <li>Усталость глаз</li>
+                                        <li>Ухудшение ночного зрения</li>
+                                        <li>Зрительный дискомфорт</li>
+                                    </ul>
+                                </div>
+                                <div class="care__slide--img">
+                                    <img src="assets/img/slide-1.jpg" alt="">
+                                </div>
+                            </div>
+                            <div class="care__slide swiper-slide">
                                 <div class="care__slide--text">
                                     <h3>Симптомы синдрома «сухого глаза»</h3>
                                     <p>Синдром «сухого глаза» - это не просто сухость поверхности глаза:
@@ -178,7 +184,8 @@
                 <div class="footer__wrapper">
                     <div class="footer__item"><a href="#">Политика конфидециальности</a></div>
                     <a href="index.html">
-                        <img src="assets/img/icons/Santen_logo.svg" alt="" style="max-width: clamp(6.25rem, calc(5.29rem + 4.81vw), 9.38rem);">
+                        <img src="assets/img/icons/Santen_logo.svg" alt=""
+                            style="max-width: clamp(6.25rem, calc(5.29rem + 4.81vw), 9.38rem);">
                     </a>
                     <div class="footer__item">
                         <p>Copyright © 2024</p>
@@ -187,6 +194,7 @@
             </div>
         </footer>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
