--- a/index.html
+++ b/index.html
@@ -61,36 +61,91 @@
                                 </svg>
                             </div>
                         </div>
-                        <div class="hero__wrapper">
-                            <div class="hero-home__offer hero__offer">
-                                <div class="hero-home__offer--subtitle">(Ocutears® Hydro+)</div>
-                                <div class="hero-home__offer--title">Окутиарз® Гидро+</div>
-                                <p>Поперечно-связанная гиалуроновая кислота для терапии синдрома «сухого глаза»</p>
-                                <a href="#" class="btn btn-light">Найти Окутиарз® Гидро+</a>
-                            </div>
-                            <div class="hero-home__img hero__img">
-                                <img src="assets/img/ocurtears.png" alt="">
-                            </div>
-                            <div class="hero__annex">
-                                <div class="hero__annex--item">
-                                    <div class="hero__annex--icon"><img src="assets/img/icons/icon-1.svg" alt=""></div>
-                                    <div class="hero__annex--text">Оптимальная концентрация ГК 0,2% не вызывает ощущения
-                                        склеивания</div>
+
+
+                        <div class="home__slider">
+                            <div class="swiper-wrapper">
+                                <div class="hero__wrapper swiper-slide">
+                                    <div class="hero-home__offer hero__offer">
+                                        <div class="hero-home__offer--subtitle">(Ocutears® Hydro+)</div>
+                                        <div class="hero-home__offer--title">Окутиарз® Гидро+</div>
+                                        <p>Поперечно-связанная гиалуроновая кислота для терапии синдрома «сухого глаза»
+                                        </p>
+                                        <a href="#" class="btn btn-light">Найти Окутиарз® Гидро+</a>
+                                    </div>
+                                    <div class="hero-home__img hero__img">
+                                        <img src="assets/img/ocurtears.webp" alt="">
+                                    </div>
+                                    <div class="hero__annex">
+                                        <div class="hero__annex--item">
+                                            <div class="hero__annex--icon"><img src="assets/img/icons/icon-1.svg"
+                                                    alt="">
+                                            </div>
+                                            <div class="hero__annex--text">Оптимальная концентрация ГК 0,2% не вызывает
+                                                ощущения
+                                                склеивания</div>
+                                        </div>
+                                        <div class="hero__annex--item">
+                                            <div class="hero__annex--icon"><img src="assets/img/icons/icon-2.svg"
+                                                    alt="">
+                                            </div>
+                                            <div class="hero__annex--text">Способствует более интенсивной регенерации
+                                                глазной
+                                                поверхности</div>
+                                        </div>
+                                        <div class="hero__annex--item">
+                                            <div class="hero__annex--icon"><img src="assets/img/icons/icon-3.svg"
+                                                    alt="">
+                                            </div>
+                                            <div class="hero__annex--text">Не содержит консервантов</div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="hero__annex--item">
-                                    <div class="hero__annex--icon"><img src="assets/img/icons/icon-2.svg" alt=""></div>
-                                    <div class="hero__annex--text">Способствует более интенсивной регенерации глазной
-                                        поверхности</div>
-                                </div>
-                                <div class="hero__annex--item">
-                                    <div class="hero__annex--icon"><img src="assets/img/icons/icon-3.svg" alt=""></div>
-                                    <div class="hero__annex--text">Не содержит консервантов</div>
+                                <div class="hero__wrapper swiper-slide">
+                                    <div class="hero-home__offer hero__offer">
+                                        <div class="hero-home__offer--subtitle">(Ocutears® Alo+)</div>
+                                        <div class="hero-home__offer--title">Окутиарз® Ало+</div>
+                                        <p>Поперечно-связанная гиалуроновая кислота для терапии синдрома «сухого глаза»
+                                        </p>
+                                        <a href="#" class="btn btn-light">Найти Окутиарз® Ало+</a>
+                                    </div>
+                                    <div class="hero-home__img hero__img">
+                                        <img src="assets/img/ocurtears-alo.webp" alt="">
+                                    </div>
+                                    <div class="hero__annex">
+                                        <div class="hero__annex--item">
+                                            <div class="hero__annex--icon"><img src="assets/img/icons/icon-1.svg"
+                                                    alt="">
+                                            </div>
+                                            <div class="hero__annex--text">Оптимальная концентрация ГК 0,2% не вызывает
+                                                ощущения
+                                                склеивания</div>
+                                        </div>
+                                        <div class="hero__annex--item">
+                                            <div class="hero__annex--icon"><img src="assets/img/icons/icon-2.svg"
+                                                    alt="">
+                                            </div>
+                                            <div class="hero__annex--text">Способствует более интенсивной регенерации
+                                                глазной
+                                                поверхности</div>
+                                        </div>
+                                        <div class="hero__annex--item">
+                                            <div class="hero__annex--icon"><img src="assets/img/icons/icon-3.svg"
+                                                    alt="">
+                                            </div>
+                                            <div class="hero__annex--text">Не содержит консервантов</div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+
                         </div>
 
-                    </div>
 
+
+
+
+                    </div>
                 </div>
             </div>
             <section class="care">
@@ -148,23 +203,21 @@
                             </div>
                             <div class="care__slide swiper-slide">
                                 <div class="care__slide--text">
-                                    <h3>Симптомы синдрома «сухого глаза»</h3>
-                                    <p>Синдром «сухого глаза» - это не просто сухость поверхности глаза:
-                                        она может проявляться по-разному и ухудшать качество жизни.</p>
-                                    <ul>
-                                        <li>Жжение</li>
-                                        <li>Резь</li>
-                                        <li>Ощущение инородного тела в глазу</li>
-                                        <li>Покраснение и слезоточивость глаз</li>
-                                        <li>Ухудшение зрения</li>
-                                        <li>Повышенная светобоязнь</li>
-                                        <li>Усталость глаз</li>
-                                        <li>Ухудшение ночного зрения</li>
-                                        <li>Зрительный дискомфорт</li>
-                                    </ul>
+                                    <h3></h3>
+                                    <p>Зачастую пациенты недостаточно серьезно относятся к появлению вышеописанных
+                                        симптомов и не сразу обращаются к врачу. Однако синдром «сухого глаза» может
+                                        существенно ухудшить качество жизни и негативно повлиять на повседневную
+                                        деятельность человека.
+                                    </p>
+                                    <p>
+                                        Синдром «сухого глаза», оставленный без лечения, может привести к ухудшению
+                                        состояния и другим серьезным последствиям, например воспалению и повреждению
+                                        поверхности глаза.
+                                    </p>
+
                                 </div>
                                 <div class="care__slide--img">
-                                    <img src="assets/img/slide-1.jpg" alt="">
+                                    <img src="assets/img/watercolor-eyes-illustration 1.jpg" alt="">
                                 </div>
                             </div>
 
