--- a/index.html
+++ b/index.html
@@ -14,6 +14,42 @@
         <header class="header">
             <div class="container">
                 <div class="header__wrapper">
+                    <div class="header__title">
+                        Портал <span>здоровых глаз</span>
+                    </div>
+                    <div class="header__links">
+                        <ul>
+                            <li><a href="#">Найти  Окутиарз Гидро+</a></li>
+                            <li><a href="#">Найти  Окутиарз Ало+</a></li>
+                            <li><a href="#">Найти  Катионорм</a></li>
+                        </ul>
+                    </div>
+                    <div class="header__osdi">
+                        <img src="assets/img/icons/octurias-logo.svg" alt="" width="63px" style="object-fit: contain;">
+                        <div class="header__osdi--link">
+                            <small>Есть ли у Вас</small><br><span>синдром “сухого глаза”?</span><br>
+                            <a href="osdi.html" class="btn btn-light">ПРОЙДИТЕ ТЕСТ </a>
+                        </div>
+                    </div>
+                    <nav class="header__nav">
+                        <div class="header__nav--lang">
+                            <a href="#">Arm</a>
+                            <a href="#">Ru</a>
+                        </div>
+                        <div class="header__nav--menu">
+                            <ul>
+                                <li><a href="index.html">Главная</a></li>
+                                <li><a href="#">Продукты</a></li>
+                                <li><a href="osdi.html">Диагностика</a></li>
+                                <li><a href="#">Блог</a></li>
+                                <li><a href="#">Контакты</a></li>
+                                <div class="menu-close"></div>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+
+                <!-- <div class="header__wrapper">
                     <a href="index.html">
                         <img src="assets/img/icons/Santen_logo.svg" alt=""
                             style="max-width: clamp(6.25rem, calc(5.29rem + 4.81vw), 9.38rem);">
@@ -36,13 +72,32 @@
                             </ul>
                         </nav>
                     </div>
-                </div>
+                </div> -->
             </div>
         </header>
         <main class="main">
             <div class="hero-home hero">
                 <div class="container">
-                    <div class="hero-home__slider">
+                    <div class="hero__wrapper">
+                        <div class="hero__offer">
+                            <div class="hero__title">
+                                Приветствуем Вас на сайте, посвященном проблеме синдрома «сухого глаза»!
+                            </div>
+                            <p>Команда Oktears подготовила и наполнила его в тесном взаимодействии с лучшими врачами-офтальмологами.</p>
+                            <p>Здесь Вы найдете ответы на наиболее распространенные вопросы о синдроме «сухого глаза». Автоматизированный опросник поможет оценить состояние своей слезной пленки и правильно подобрать рекомендуемый Вам слезозаменитель, чтобы облегчить симптомы.</p>
+                            <small>На сайте представлена информация о современных фармацевтических препаратах от одного из мировых лидеров офтальмологической индустрии – компании «Сантэн». Вы сможете узнать интересные факты о том, как поддержать здоровье своих глаз, а также найти в удобной для Вас аптеки рекомендуемый препарат.</small>
+                            <p><b>С наилучшими пожеланиями, команда OKtears</b></p>
+                        </div>
+                        <div class="hero-home__img hero__img">
+                            <img src="assets/img/beauty-treatments-portrait 1.jpg" alt="">
+                        </div>
+                        <div class="hero__b-title">
+                            «Давайте вместе вообразим свое счастье – счастье видеть и дарить свет близким!»
+                        </div>
+                    </div>
+
+
+                    <!-- <div class="hero-home__slider">
                         <div class="slider__btns">
                             <div class="slider__prev slider__btn">
                                 <svg width="13" height="18" viewBox="0 0 13 18" fill="none"
@@ -61,8 +116,6 @@
                                 </svg>
                             </div>
                         </div>
-
-
                         <div class="home__slider">
                             <div class="swiper-wrapper">
                                 <div class="hero__wrapper swiper-slide">
@@ -138,14 +191,8 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
-
-
-
-
-
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <section class="care">
