--- a/osdi.html
+++ b/osdi.html
@@ -452,6 +452,7 @@
             </div>
         </footer>
     </div>
+    <script src="assets/js/osdi.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 
